<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.CreateFragment"
    android:background="#F2F2F2">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/contentdescription"
            android:onClick="goBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#1E2022"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@id/button2">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/category"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/startTime"
                        app:layout_constraintTop_toBottomOf="@+id/startTime" />

                    <Spinner
                        android:id="@+id/categorySpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:entries="@array/category"
                        android:layout_marginTop="10dp"
                        android:minHeight="48dp"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:theme="@style/mySpinnerItemStyle"
                        tools:listitem="@layout/spinner_style"
                        app:layout_constraintBottom_toBottomOf="@+id/addCategory"
                        app:layout_constraintEnd_toEndOf="@+id/endTime"
                        app:layout_constraintStart_toEndOf="@+id/addCategory"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/datePickerButton"
                        style="?android:spinnerStyle"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:backgroundTint="#FFFFFF"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/datebuttontext"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:typeface="normal"
                        app:layout_constraintEnd_toEndOf="@+id/endTime"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:text="@string/datebuttontext" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/start_time"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/end_time"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/date"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/taskName" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/task_name"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/taskName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:hint="@string/new_project_meeting"
                        android:inputType="text|textNoSuggestions"
                        android:minHeight="48dp"
                        android:maxLength="50"
                        android:textColorHint="#757575"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <Spinner
                        android:id="@+id/startTime"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:entries="@array/time"
                        android:theme="@style/mySpinnerItemStyle"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <Spinner
                        android:id="@+id/prioritySpinner"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:entries="@array/priority"
                        android:minHeight="48dp"
                        android:theme="@style/mySpinnerItemStyle"
                        app:layout_constraintStart_toStartOf="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/textView11"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <Spinner
                        android:id="@+id/endTime"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/mySpinnerItemStyle"
                        android:entries="@array/time"
                        android:minHeight="48dp"
                        app:layout_constraintStart_toStartOf="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />


                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/participants"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/prioritySpinner"
                        app:layout_constraintTop_toBottomOf="@+id/prioritySpinner" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Priority Level "
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/addCategory"
                        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/description"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/addParticipant" />

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:maxLength="250"
                        android:hint="@string/descriptionmain"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp"
                        android:textColorHint="#78909C"
                        android:textSize="14sp"
                        android:textColor="@color/gray_text"
                        app:layout_constraintEnd_toEndOf="@+id/categorySpinner"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <ImageButton
                        android:id="@+id/addParticipant"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/participant_button"
                        android:onClick="insertParticipant"
                        android:src="@drawable/add_icon"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <ImageButton
                        android:id="@+id/addCategory"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/participant_button"
                        android:onClick="addCategory"
                        android:src="@drawable/add_icon"
                        app:layout_constraintStart_toStartOf="@+id/textView9"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/participantRecycler"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="@+id/addParticipant"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/addParticipant"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        tools:ignore="SpeakableTextPresentCheck"
                        tools:listitem="@layout/recycler_participant" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#FD5B74"
            android:onClick="createTask"
            android:text="@string/create_new_task"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />


    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.coordinatorlayout.widget.CoordinatorLayout>