<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/rectangleLine"
                android:layout_width="22dp"
                android:layout_height="53dp"
                android:background="@drawable/rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/redesign_my_website"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLength="20"
                app:layout_constraintStart_toEndOf="@+id/rectangleLine"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/if_you_are_going_to_use_a_passage_of_lorem_ipsum_you_need_to_be_sure_there_isn_t_anything_embarras_hidden_in_the_middle_of_text_all_the_lorem_ipsum_generators_on_the_internet_tend_to_repeat_predefin_chunks_as_necessary_making_this_the_first_true_generator_on_the_internet"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@+id/statementText"
                app:layout_constraintStart_toStartOf="@+id/headerText"
                app:layout_constraintTop_toBottomOf="@+id/headerText"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="96dp"
                android:text="@string/datetext"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/descriptionText"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText"
                app:srcCompat="@drawable/person_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/personCountText"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:text="@string/personCountText"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/timeText"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText"
                app:srcCompat="@drawable/time_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/timeText"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/statementText"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/statementText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="New"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

