<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/rectangleLine"
                android:layout_width="15dp"
                android:layout_height="83dp"
                android:background="@drawable/rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="5dp"
                android:text="@string/marketing"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/rectangleLine"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/business_development"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/headerText"
                app:layout_constraintTop_toBottomOf="@+id/headerText"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/datetext"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="23dp"
                android:layout_height="18dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/descriptionText"
                app:srcCompat="@drawable/edit_icon"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/taskCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="20dp"
                android:text="@string/_13_tasks"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                tools:ignore="TextContrastCheck" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="95dp"
                android:layout_height="84dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:indeterminateOnly="false"
                android:progress="23"
                android:progressDrawable="@drawable/progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateText" />

            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_23"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
                app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                app:layout_constraintStart_toStartOf="@+id/progress_bar"
                app:layout_constraintTop_toTopOf="@+id/progress_bar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskCountRecycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/taskCountText"
                app:layout_constraintEnd_toStartOf="@+id/progress_bar"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="@+id/descriptionText"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText"
                tools:ignore="SpeakableTextPresentCheck"
                tools:listitem="@layout/recycler_task_person_count" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>